--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "morgan": "^1.8.2",
-    "request": "^2.81.0"
-  },
-  "devDependencies": {
+    "request": "^2.81.0",
     "apiai": "^4.0.3"
   }
 }
